# svil-baduk

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  VERSIONING.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: ci.yml
docs/: DESIGN_20260723_Stitch비전_Cursor.md
docs/architecture/: ARCH_20260723_AI엔진_Cursor.md  ARCH_20260723_개요_Cursor.md
docs/handoff/: HANDOFF_20260723_2330_StitchUI_KataGoGPU_Cursor.md  HANDOFF_20260723_작업지시서_Cursor.md
docs/outline-wiki/: svil-baduk-architecture.md  svil-baduk-handoff.md  svil-baduk-prd-current.md  svil-baduk-project-wiki.md  svil-baduk-roadmap.md  svil-baduk-spec-current.md
docs/prd/: PRD_20260723_고대비바둑_Cursor.md  ROADMAP_20260723_로드맵_Cursor.md
docs/reports/: 완료보고_20260723_StitchUI·KataGoGPU_Cursor.md
docs/storyboard/: STORY_20260723_화면스토리보드_Cursor.md
katago/: README.md  gtp_play.cfg
scripts/: background.ps1  dev-all.ps1  install_desktop_shortcut.ps1  install_tauri_shortcut.ps1  katago-bridge.mjs  setup-codesign.ps1  setup-katago.ps1  sign-windows.ps1  start-app.ps1  start-tauri.ps1
src/: App.css  App.tsx  index.css  version.ts
src-tauri/: Cargo.toml  sign-windows.cmd  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/ai/: bridgeTransport.ts  builtin.test.ts  builtin.ts  detectCompute.ts  gtpParse.test.ts  gtpParse.ts  katago.ts  ranks.ts
src/audio/: moveSound.ts
src/components/: Board.tsx  GamePanel.tsx  MoveAnnouncer.tsx  PulseRings.tsx  RoomQr.tsx
src/engine/: board.test.ts  board.ts  scoring.test.ts  scoring.ts  types.ts
src/i18n/: dict.ts
(+22 files in other folders)
