[package]
name = "svil-baduk"
version = "0.6.8"
description = "SVIL Baduk — high-contrast Go for low vision"
authors = ["SVIL"]
license = "MIT"
repository = "https://github.com/kuroicode-beep/svil-baduk"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "svil_baduk_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.3", features = [] }
tauri-plugin-log = "2"
